Added more infor

--- a/cv.tex
+++ b/cv.tex
@@ -74,20 +74,15 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 %----------------------------------------------------------------------------------------
 \section{Education}
 
-\begin{tabular}{rl}
-    \textsc{Current} & B. Tech in \textsc{Computer Science and Engineering},\\
+\begin{tabular}{rp{10cm}r}
+    \textsc{Current} & B. Tech in \textsc{Computer Science and Engineering} &   9.6/10.0\\
                      & \textbf{Indian Institute of Technology}, Kanpur\\
-                     & \normalsize \textsc{Gpa}: 9.6/10.0 \\
-                     \\
 
-    \textsc{July} 2011 & 12th Board, \textsc{CBSE} Board, \\
+    \textsc{July} 2011 & 12th Board, \textsc{CBSE} Board                    &   91.4\% \\
                        & \normalsize\textbf{The Emerald Heights International School}, Indore\\
-                       & \normalsize \textsc{Percentage}: 91.4 \\
-                       \\
 
-    \textsc{July} 2011 & 10th Board, \textsc{ICSE} Board,  \\
+    \textsc{July} 2011 & 10th Board, \textsc{ICSE} Board                    &   95.4\% \\
                        & \normalsize\textbf{The Laurels School International}, Indore \\
-                       & \normalsize \textsc{Percentage}: 95.4 \\
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
@@ -95,11 +90,12 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 %----------------------------------------------------------------------------------------
 \section{Scholarships and Conferences}
 
-\begin{tabular}{rl}
+\begin{tabular}{rp{12cm}}
 
     \textsc{Jan} 2011 & Kishore Vaigyanik Protsahan Yojana (KVPY) Fellowship \\
     \textsc{Dec} 2008 & FIITJEE Talent Reward Examination Scholarship \\
-    \textsc{Dec} 2009 & CSIR Programme on Youth for Leadership in Science (CPYLS camp) \\
+    \textsc{Dec} 2009 & CSIR Programme on Youth for Leadership in Science (CPYLS camp),
+                        held at Advanced Materials Research Institute, Bhopal\\
 
 \end{tabular}
 
@@ -112,15 +108,18 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 
     \textsc{2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     \textsc{2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
-    \textsc{Fall 2012}   & \textbf{Academic Mentor} for Y12 batch in \textbf{Fundamentals of Computer Science (ESC101)}. \\
+    \textsc{Fall 2012}   & \textbf{Academic Mentor}, \textbf{Fundamentals of Computer Science (ESC101)}. \\
                          & \footnotesize{As an academic Mentor, I was entrusted with the responsibility of making sure
                             that the students under me were able to keep pace with instructor and aid them in understanding
                             the difficult concepts of the course. }\\
     \textsc{Jan 2010}    & Qualified for \textbf{Indian National Mathematics Olympaid} (INMO) \\
     \textsc{May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
     \textsc{Sep 2010}    & \textbf{AIR 17} in \textbf{Technothlon} (Techniche) conducted by Indian Institute of Technology Guwahati. \\
-    \textsc{2005, 2009}  & Awarded overall best student in grades 6th and 9th for displaying all round excellence. \\
-    \textsc{2000 - 2009} & Recipient of scholastic excellence awards for exemplary academic performance throughout 2nd to 12th grade. \\
+    \textsc{June 2010}   & Awarded \textbf{Top Scorer in English} by \textbf{Laurels School International} in ICSE 2009. \\
+    \textsc{2009}        & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
+    \textsc{2005}        & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
+    \textsc{2000 - 2009} & Recipient of \textbf{Scholastic Excellence} awards for exemplary academic
+                           performance throughout 2nd to 12th grade. \\
 
 \end{tabular}
 
@@ -336,12 +335,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 \section {Social, Leadership and Artistic Skills}
 \begin{tabular}{rp{12cm}}
 
-    2013-2014    & \textbf{Volunteer, English Proficiency Programme}\\
-                 & \footnotesize{English Proficiency Programme is the brainchild
-                    of \textbf{Professor Bhaskar Dasgupta}. The objective of the
-                    programme is to impart a functional knowledge of English to
-                    any interested student. I was a volunteer of the first leg
-                    of the programme which helped under-privileged students.}\\
+    -   & Active blogger at \href{srijanshetty.quora.com} {srijanshetty.quora.com} \\
 
     -    & \textbf{Hacker, Navya, FOSS Group IIT Kanpur}\\
          & \footnotesize{Navya is the Free and Open Source Software Group at IIT
@@ -349,11 +343,18 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
            hacks on FOSS applications which would be of use to the students
            community \href{https://github.com/navya} {Github Repo}} \\
 
+    2013-2014    & \textbf{Volunteer, English Proficiency Programme}\\
+                 & \footnotesize{English Proficiency Programme is the brainchild
+                    of \textbf{Professor Bhaskar Dasgupta}. The objective of the
+                    programme is to impart a functional knowledge of English to
+                    any interested student. I was a volunteer of the first leg
+                    of the programme which helped under-privileged students.}\\
+
     2014 & \textbf{Head, Major Events and Competitions, Antaragni'14} , the annual cultural festival of
     IIT Kanpur. \\
 
     2013 & \textbf{Hospitality Coordinator, Antaragni ‘13}\\
-         & \footnotesize{As a Hospitality Coordinator, I was oversaw a team of 150 students responsible for
+         & \footnotesize{As a Hospitality Coordinator, I oversaw a team of 150 students responsible for
             the hospitality of the 1500 students who visit the campus for Antaragni, the annual cultural festival
             of IIT Kanpur which takes place in October every year.}\\
 
@@ -374,7 +375,6 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
     2012 & \textbf{Secretary, English Literary Society}. \\
 
     2010 & A year of schooling in \textbf{Indian Classical Music}. (Prayag Sangeet Samiti Allahabad). \\
-    -   & Active blogger at \href{srijanshetty.quora.com} {srijanshetty.quora.com} \\
 
 \end{tabular}
 
