Changed the page formatting

--- a/cv.tex
+++ b/cv.tex
@@ -13,10 +13,9 @@
 \usepackage{marvosym} % Allows the use of symbols
 \usepackage{scrpage2} % Provides headers and footers configuration
 
-
 \usepackage[usenames,dvipsnames]{xcolor} % Required for specifying custom colors
 
-\usepackage[big]{layaureo} % Margin formatting of the A4 page, an alternative to layaureo can be \usepackage{fullpage}
+% \usepackage[big]{layaureo} % Margin formatting of the A4 page, an alternative to layaureo can be \usepackage{fullpage}
 % To reduce the height of the top margin uncomment: \addtolength{\voffset}{-1.3cm}
 
 \usepackage{hyperref} % Required for adding links	and customizing them
@@ -29,6 +28,10 @@
 \titleformat{\section}{\Large\scshape\raggedright}{}{0em}{}[\titlerule] % Text formatting of sections
 \titlespacing{\section}{0pt}{3pt}{3pt} % Spacing around sections
 
+% Custom arrangement for the columns
+\usepackage[margin=2cm]{geometry}
+\usepackage{array}
+
 \begin{document}
 
 \font\fb=''[cmr10]'' % Change the font of the \LaTeX command under the skills section
@@ -37,8 +40,10 @@
 
 \pagestyle{scrheadings} % Print the headers and footers on all pages
 
-\addtolength{\voffset}{-0.5in} % Adjust the vertical offset - less whitespace at the top of the page
-\addtolength{\textheight}{3cm} % Adjust the text height - less whitespace at the bottom of the page
+% \addtolength{\voffset}{-0.5in} % Adjust the vertical offset - less whitespace at the top of the page
+% \addtolength{\textheight}{3cm} % Adjust the text height - less whitespace at the bottom of the page
+% \addtolength{\textwidth}{-2cm}
+
 
 %----------------------------------------------------------------------------------------
 % FOOTER SECTION
@@ -74,15 +79,17 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 %----------------------------------------------------------------------------------------
 \section{Education}
 
-\begin{tabular}{rp{10cm}r}
+\begin{tabular}{>{\raggedleft}p{2.2cm}p{12cm}r}
+
     \textsc{Current} & B. Tech in \textsc{Computer Science and Engineering} &   9.6/10.0\\
                      & \textbf{Indian Institute of Technology}, Kanpur\\
 
-    \textsc{July} 2011 & 12th Board, \textsc{CBSE} Board                    &   91.4\% \\
+    \textsc{July 2011} & 12th Board, \textsc{CBSE} Board                    &   91.4\% \\
                        & \normalsize\textbf{The Emerald Heights International School}, Indore\\
 
-    \textsc{July} 2011 & 10th Board, \textsc{ICSE} Board                    &   95.4\% \\
+    \textsc{July 2011} & 10th Board, \textsc{ICSE} Board                    &   95.4\% \\
                        & \normalsize\textbf{The Laurels School International}, Indore \\
+
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
@@ -90,11 +97,11 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 %----------------------------------------------------------------------------------------
 \section{Scholarships and Conferences}
 
-\begin{tabular}{rp{12cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}p{14cm}}
 
-    \textsc{Jan} 2011 & Kishore Vaigyanik Protsahan Yojana (KVPY) Fellowship \\
-    \textsc{Dec} 2008 & FIITJEE Talent Reward Examination Scholarship \\
-    \textsc{Dec} 2009 & CSIR Programme on Youth for Leadership in Science (CPYLS camp),
+    \textsc{Jan 2011} & Kishore Vaigyanik Protsahan Yojana (KVPY) Fellowship \\
+    \textsc{Dec 2008} & FIITJEE Talent Reward Examination Scholarship \\
+    \textsc{Dec 2009} & CSIR Programme on Youth for Leadership in Science (CPYLS camp),
                         held at Advanced Materials Research Institute, Bhopal\\
 
 \end{tabular}
@@ -104,7 +111,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 %----------------------------------------------------------------------------------------
 \section{Scholastic Achievements}
 
-\begin{tabular}{rp{12cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}p{14cm}}
 
     \textsc{2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     \textsc{2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
@@ -116,8 +123,8 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
     \textsc{May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
     \textsc{Sep 2010}    & \textbf{AIR 17} in \textbf{Technothlon} (Techniche) conducted by Indian Institute of Technology Guwahati. \\
     \textsc{June 2010}   & Awarded \textbf{Top Scorer in English} by \textbf{Laurels School International} in ICSE 2009. \\
-    \textsc{2009}        & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
-    \textsc{2005}        & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
+    \textsc{Dec 2009}    & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
+    \textsc{Dec 2005}    & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
     \textsc{2000 - 2009} & Recipient of \textbf{Scholastic Excellence} awards for exemplary academic
                            performance throughout 2nd to 12th grade. \\
 
@@ -128,7 +135,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 %----------------------------------------------------------------------------------------
 \section{Skill Set}
 
-\begin{tabular}{rl}
+\begin{tabular}{>{\raggedleft}p{2.2cm}p{14cm}}
 
     \textsc{Languages}: %
             & \textbf{C}, \textbf{C++},\textbf{Python}, \textbf{JavaScript} \\
@@ -145,7 +152,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 
 \section{Work Experience}
 
-\begin{tabular}{p{2.2cm}|p{11cm}}
+\begin{tabular}{p{2.2cm}|p{14cm}}
     \textsc{May-Jul 2014} & Research Intern at \textsc{Microsoft Research India}, Bangalore\emph{}\\
                           & \footnotesize{The major objective of this project was to optimize
                             \textbf{CScale for concurrency}. CScale provides a declarative programming model
@@ -154,7 +161,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                             of the concurrency optimizations in real world scenarios.}\\
 \end{tabular}
 
-\begin{tabular}{p{2.2cm}|p{11cm}}
+\begin{tabular}{p{2.2cm}|p{14cm}}
     \textsc{May-Jul 2013} & Software Development at \textsc{Aurus Networks}, Bangalore\emph{}\\
                           & \footnotesize{Using \textbf{HTML5, javascript, CSS3}, I ported the legacy
                             \textbf{Flash} based online media player of \textbf{CourseHub} - Aurus'
@@ -167,7 +174,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 %----------------------------------------------------------------------------------------
 \section{Course Projects}
 
-\begin{tabular}{p{2.2cm}|p{11cm}}
+\begin{tabular}{p{2.2cm}|p{14cm}}
     \textsc{Spring 2014} & JavaScript to MIPS Compiler, \textsc{\raggedright Compilers} \\
                          & \footnotesize{An end-to-end compiler for a subset of ECMAScript5.1
                             which compiled to MIPS was implemented in Python. No runtime support
@@ -176,7 +183,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                             \href{https://github.com/srijanshetty/javascript-compiler} {Git Repo}} \\
 \end{tabular}
 
-\begin{tabular}{p{2.2cm}|p{11cm}}
+\begin{tabular}{p{2.2cm}|p{14cm}}
     \textsc{Spring 2014} & Hindi author attribution, \textsc{\raggedright Artificial Intelligence} \\
                          & \footnotesize{The first half of this project was a multi-class clustering problem,
                             wherein authors were to be clustered according to their writing style.
@@ -188,7 +195,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                             \href{https://github.com/srijanshetty/author-attribution} {Git Repo}}\\
 \end{tabular}
 
-\begin{tabular}{p{2.2cm}|p{11cm}}
+\begin{tabular}{p{2.2cm}|p{14cm}}
     \textsc{Fall 2013} & NachOS, \textsc{Operating Systems} \\
                        & \footnotesize{The coursework included implementation of system calls; process
                           management and scheduling; memory management schemes and page replacement
@@ -196,7 +203,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                           the professor-in-charge}\\
 \end{tabular}
 
-\begin{tabular}{p{2.2cm}|p{11cm}}
+\begin{tabular}{p{2.2cm}|p{14cm}}
     \textsc{Fall 2013} & P2P File Sharing and Streaming, \textsc{Computer Networks} \\
                        & \footnotesize{A Node.js based local file server and media playback server was implemented
                           to understand the underpinnings of Transport Layer Protocols, socket programming,
@@ -204,27 +211,27 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                           \href{https://github.com/srijanshetty/nodesock} {Git Repo}}\\
 \end{tabular}
 
-\begin{tabular}{p{2.2cm}|p{11cm}}
+\begin{tabular}{p{2.2cm}|p{14cm}}
     \textsc{Fall 2013} & IP Spoofing, \textsc{Computer Networks} \\
                        & \footnotesize{Under the guidance of \textbf{Professor Dheeraj Sanghi}, different methodologies
                           of spoofing IP addresses and different uses of spoofing IPs were implemented and tested
                           in a secure environment.}\\
 \end{tabular}
 
-\begin{tabular}{p{2.2cm}|p{11cm}}
+\begin{tabular}{p{2.2cm}|p{14cm}}
     \textsc{Fall 2013} & Metro Travel Plan(Prolog), \textsc{Principles of Programming Languages} \\
                        & \footnotesize{Implementation of shortest paths in Prolog on the Delhi Metro route.
                           The professor-in-charge was \textbf{Professor P. Kurur}}\\
 \end{tabular}
 
-\begin{tabular}{p{2.2cm}|p{11cm}}
+\begin{tabular}{p{2.2cm}|p{14cm}}
     \textsc{Fall 2013} & Erlang Traffic Server, \textsc{Principles of Programming Languages} \\
                        & \footnotesize{A simple traffic server implemented in Erlang using message passing
                           concurrency and tail call recursion functional aspects of the language under the
                           guidance of \textbf{Professor P. Kurur}}\\
 \end{tabular}
 
-\begin{tabular}{p{2.2cm}|p{11cm}}
+\begin{tabular}{p{2.2cm}|p{14cm}}
     \textsc{Spring 2013} & 8-bit General Purpose Computer on a FPGA, \textsc{Computer Organization} \\
                          & \footnotesize{The GPC had a load-store architecture and was written in System Verilog and
                             implemented on a \textbf{Xilinx Spartan 3 FPGA}.  The project was under the
@@ -234,7 +241,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                             \href{https://github.com/srijanshetty/220_y11} {Git Repo}} \\
 \end{tabular}
 
-\begin{tabular}{p{2.2cm}|p{11cm}}
+\begin{tabular}{p{2.2cm}|p{14cm}}
     \textsc{Spring 2013} & Conference Dates Web Crawler, \textsc{Computing Laboratory} \\
                          & \footnotesize{A python based web crawler which could obtain paper submission
                             deadlines of a provided conference name.  BeautifulSoup and urllib along
@@ -242,7 +249,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                             \href{https://github.com/srijanshetty/crawler} {Git Repo} } \\
 \end{tabular}
 
-\begin{tabular}{p{2.2cm}|p{11cm}}
+\begin{tabular}{p{2.2cm}|p{14cm}}
     \textsc{Fall 2011} & "No situation is unique and certain moral principles can be applied across all situation",
                          \textsc{Introduction to Philosophy} \\
                        & \footnotesize{ An argumentative discourse proving that certain moral principles
@@ -256,7 +263,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 %----------------------------------------------------------------------------------------
 \section{Side Projects}
 
-\begin{tabular}{p{2.2cm}|p{11cm}}
+\begin{tabular}{p{2.2cm}|p{14cm}}
     \textsc{July 2014} & OARS\\
                        & \footnotesize{OARS is a \textbf{AngularJS} based front-end for the
                           courses offered in IIT Kanpur. It was created as a
@@ -268,7 +275,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 
 \end{tabular}
 
-\begin{tabular}{p{2.2cm}|p{11cm}}
+\begin{tabular}{p{2.2cm}|p{14cm}}
     \textsc{March 2014} & GYPH\\
                         & \footnotesize{GYPH or Get Your Personal Homepage
                            is a simple hassle-free homepage designer for students who are not
@@ -277,7 +284,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                            \href{http://gyph2.herokuapp.com/} {Website} } \\
 \end{tabular}
 
-\begin{tabular}{p{2.2cm}|p{11cm}}
+\begin{tabular}{p{2.2cm}|p{14cm}}
     \textsc{August 2013} & ShuffleRun\\
                          & \footnotesize{A hack for Yahoo HackU. ShuffleRun is a
                             web based music player which selects a track from the users library
@@ -285,20 +292,16 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                             \href{https://github.com/srijanshetty/ShuffleRun} {GitHub Repo} }\\
 \end{tabular}
 
-\begin{tabular}{p{2.2cm}|p{11cm}}
-    \textsc{July 2013} & Website of Udghosh\\
-                       & \footnotesize{Webpage of \textbf{Udghosh}, the annual sports festival of
-                          IIT Kanpur. \href{www.udghosh.org} {Webpage} } \\
+\begin{tabular}{p{2.2cm}|p{14cm}}
+    \textsc{July 2013} & Website of Udghosh, annual sport-fest IIT Kanpur \footnotesize{\href{www.udghosh.org} {Webpage} } \\
 \end{tabular}
 
-\begin{tabular}{p{2.2cm}|p{11cm}}
-    \textsc{Dec 2012} & Website of Hall 5, IIT Kanpur\\
-                      & \footnotesize{Homepage of \textbf{Hall 5}, IIT Kanpur.
-                         \href{http://www.iitk.ac.in/hall5} {Webpage}. } \\
+\begin{tabular}{p{2.2cm}|p{14cm}}
+    \textsc{Dec 2012} & Website of Hall 5, IIT Kanpur \footnotesize{\href{http://www.iitk.ac.in/hall5} {Webpage}} \\
 \end{tabular}
 
-\begin{tabular}{p{2.2cm}|p{11cm}}
-    \textsc{May-July 2012} & Voicing, Archiving and Networking the Information \textsc{(VANI)}, IIT Kanpur\\
+\begin{tabular}{p{2.2cm}|p{14cm}}
+    \textsc{Summer 2012} & Voicing, Archiving and Networking the Information \textsc{(VANI)}, IIT Kanpur\\
                            & \footnotesize{Vani is an \textbf{extensible} platform
                               made for the campus community consisting of Wiki, Forums,
                               Community search, Calendars etc.; built using \textbf{Drupal}
@@ -306,8 +309,8 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                               \textbf{Professor T. V. Prabhakar} } \\
 \end{tabular}
 
-\begin{tabular}{p{2.2cm}|p{11cm}}
-    \textsc{May-July 2012} & GNU/Linux Exploration, Programming Club, IIT Kanpur\\
+\begin{tabular}{p{2.2cm}|p{14cm}}
+    \textsc{Summer 2012} & GNU/Linux Exploration, Programming Club, IIT Kanpur\\
                            & \footnotesize{ The project involved exploration of various facets of
                              \textbf{GNU/Linux} like the file system, process management,
                              memory management, shell interface etc. And was
@@ -316,7 +319,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                              {Documentation} } \\
 \end{tabular}
 
-\begin{tabular}{p{2.2cm}|p{11cm}}
+\begin{tabular}{p{2.2cm}|p{14cm}}
     \textsc{July 2013} & Projects on Github \\
                        & \footnotesize{\textbf{Dotfiles}: an opinionated work flow on Linux Systems.
                           \href{https://github.com/srijanshetty/dotfiles} {Repo} } \\
@@ -333,7 +336,8 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 %----------------------------------------------------------------------------------------
 
 \section {Social, Leadership and Artistic Skills}
-\begin{tabular}{rp{12cm}}
+
+\begin{tabular}{>{\raggedleft}p{2.2cm}p{14cm}}
 
     -   & Active blogger at \href{srijanshetty.quora.com} {srijanshetty.quora.com} \\
 
@@ -380,26 +384,17 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 
 \section{CourseWork}
 
-\begin{tabular}{rl}
+\begin{tabular}{l|l}
 
-    \textsc{Current} & Computer Organization (CS220) \\
-                     & Operating Systems (CS330) \\
-                     & Compilers (CS335) \\
-                     & Computer Networks (CS425) \\
-                     & Theory of Computation (CS3) \\
-                     & Computing Laboratory (CS251 \& CS252)\\
-                     & Discreet Mathematics (CS201)\\
-                     & Logic for Computer Science (CS202A)\\
-                     & Data Structure and Algorithms (CS210)\\
-                     & Design and Analysis of Algorithms (CS345)\\
-                     & Principles of Programming Languages (CS350)\\
-                     & Computer and Internet Security (CS628)\\
-                     & Artificial Intelligence (CS365)\\
-                     & Abstract Algebra (CS202B)\\
-                     & Linear Algebra (MTH102)\\
-                     & Computational Methods in Engineering (ESO208A)\\
-                     & Multivariate Calculus (MTH101)\\
-                     & Technical Communication(CS300)\\
+    Computer Organization (CS220) & Operating Systems (CS330) \\
+    Compilers (CS335) & Computer Networks (CS425) \\
+    Theory of Computation (CS3) & Computing Laboratory (CS251 \& CS252)\\
+    Discreet Mathematics (CS201) & Logic for Computer Science (CS202A)\\
+    Data Structure and Algorithms (CS210) & Design and Analysis of Algorithms (CS345)\\
+    Principles of Programming Languages (CS350) & Computer and Internet Security (CS628)\\
+    Artificial Intelligence (CS365) & Abstract Algebra (CS202B)\\
+    Linear Algebra (MTH102) & Computational Methods in Engineering (ESO208A)\\
+    Multivariate Calculus (MTH101) & Technical Communication(CS300)\\
                      \\
 \end{tabular}
 %----------------------------------------------------------------------------------------
