Reorganization of relevant courses

--- a/cv.tex
+++ b/cv.tex
@@ -137,11 +137,12 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 
 \begin{tabular}{>{\raggedleft}p{2.2cm}p{14cm}}
 
-    \textsc{Languages}: %
+    \textsc{Languages} %
             & \textbf{C}, \textbf{C++},\textbf{Python}, \textbf{JavaScript} \\
-    \textsc{Web Dev}: %
-            & \textbf{HTML5}, \textbf{CSS}, \textbf{JavaScript}, \textbf{Flash}, \textbf{SQL}\\
-    \textsc{Tools}: %
+    \textsc{Web Dev} %
+            & \textbf{HTML5}, \textbf{CSS}, \textbf{JavaScript}, \textbf{Flash}, \textbf{SQL},
+              \textbf{AngularJS}, \textbf{Nodejs}, \textbf{NoSQL}\\
+    \textsc{Tools} %
             & \textbf{Git}, \textbf{Shell Scripting}, \textbf{Prezi}, \textbf{Vim}, \textbf{LaTeX}\\
 
 \end{tabular}
@@ -384,7 +385,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 
 \section{CourseWork}
 
-\begin{tabular}{l|l}
+\begin{tabular}{>{\raggedleft}p{8cm}|p{8cm}}
 
     Computer Organization (CS220) & Operating Systems (CS330) \\
     Compilers (CS335) & Computer Networks (CS425) \\
